@@ -101,7 +101,7 @@
                     <release>${java.version}</release>
                     <compilerArgs>
                         <!-- https://docs.oracle.com/en/java/javase/20/docs/specs/man/javac.html#standard-options -->
-                        <arg>--enable-preview</arg>
+                        <!--<arg>&#45;&#45;enable-preview</arg>-->
                         <arg>-parameters</arg>
                         <arg>-g</arg>
                     </compilerArgs>
@@ -112,7 +112,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-failsafe-plugin-version}</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <!--<argLine>&#45;&#45;enable-preview</argLine>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -120,7 +120,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-surefire-failsafe-plugin-version}</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <!--<argLine>&#45;&#45;enable-preview</argLine>-->
                 </configuration>
                 <executions>
                     <execution>
